--- a/themes/hugo-scroll/layouts/partials/head.html
+++ b/themes/hugo-scroll/layouts/partials/head.html
@@ -24,7 +24,7 @@
 {{ $stylesheetFonts := resources.Get "css/fonts.css" }}
 {{ $stylesheetGeneric := resources.Get "css/generic.css" }}
 
-{{ $stylesheetScreen := ( resources.Get "css/_index.scss" | resources.ToCSS ) }}
+{{ $stylesheetScreen := ( resources.Get "css/_index.scss" | css.Sass ) }}
 
 {{ $stylesheet := slice $stylesheetNormalize $stylesheetFA $stylesheetFonts $stylesheetGeneric $stylesheetScreen | resources.Concat "css/style.css" | resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $stylesheet.Permalink }}" type="text/css" integrity="{{ $stylesheet.Data.Integrity }}" />
